add meta  keywords

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Forcematica | Salesforce Experts</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="We are a Salesforce development company offering CRM solutions, custom app development, integration, and consulting services to help businesses automate and grow with Salesforce.">
+  <meta name="keywords" content="Salesforce development company, Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
