--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -190,10 +190,10 @@
             <span class="sitename">Forcematica Technologies</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Pradhan Market</p>
+            <p>Muhana 302029</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91-8559957782</span></p>
+            <p><strong>Email:</strong> <span>info@forcematica.com</span></p>
           </div>
         </div>
 
@@ -238,7 +238,6 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
 
