--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Salesforce development company, Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+<!--   <link href="assets/img/favicon.png" rel="icon"> -->
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
