--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Forcematica</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>2025</span> <strong class="px-1 sitename">Forcematica</strong> <span>All Rights Reserved</span></p>
       
     </div>
 
