--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <!-- <i class="bi bi-activity"></i> -->
                 <div class="icon mb-2"><i class="bi bi-cart-check"></i></div>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>B2B Commerce Cloud</h3>
               </a>
               <p>Accelerate B2B sales with self-service, digital commerce solutions powered by Salesforce.</p>
@@ -250,7 +250,7 @@
                 <!-- <i class="bi bi-broadcast"></i> -->
                 <i class="bi bi-bar-chart-line"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>Sales Cloud</h3>
               </a>
               <p>Empower your sales team with automation, insights, and productivity tools.</p>
@@ -263,7 +263,7 @@
                 <i class="bi bi-headset"></i>
                 <!-- <i class="bi bi-easel"></i> -->
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>Service Cloud</h3>
               </a>
               <p>Deliver world-class customer service experiences across every channel.</p>
@@ -276,11 +276,11 @@
                 <!-- <i class="bi bi-bounding-box-circles"></i> -->
                 <i class="bi bi-globe"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>Experience Cloud</h3>
               </a>
               <p>Build portals and communities to connect customers, partners, and employees.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -290,11 +290,11 @@
                 <!-- <i class="bi bi-calendar4-week"></i> -->
                 <i class="bi bi-cash-coin"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>Salesforce CPQ</h3>
               </a>
               <p>Automate complex pricing and quoting with powerful configuration tools.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -304,11 +304,11 @@
                 <i class="bi bi-cloud-arrow-down"></i>
                 <!-- <i class="bi bi-chat-square-text"></i> -->
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <h3>AppExchange Products</h3>
               </a>
               <p>Choose from our suite of proven Salesforce-native apps or request a custom build.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
