--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/company/forcematica/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -651,7 +651,7 @@
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/company/forcematica/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -667,7 +667,7 @@
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/company/forcematica/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
