--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.6930353656235!2d75.7319306!3d26.797884800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864f2c92d370c1cf%3A0x9d09801851658f08!2sForcematica!5e1!3m2!1sen!2sin!4v1752656561680!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.6930353656235!2d75.7319306!3d26.797884800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864f2c92d370c1cf%3A0x9d09801851658f08!2sForcematica!5e1!3m2!1sen!2sin!4v1752656561680!5m2!1sen!2sin" width="600" height="450" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d434.7589053444682!2d75.73216300562693!3d26.797972615267167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396dcb5d8a4bb963%3A0xa2802a5d067c84bb!2sToLetPlus!5e1!3m2!1sen!2sin!4v1747158998156!5m2!1sen!2sin" width="600" height="450" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
             </div>
           </div>
