--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.png" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            <!--Need to add Youtibe link   // Added bY Rahul Yadav  on date - 16 july 2025-->
+            <a href="https://forcematica.com" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>Forcematica</h3>
