changes in maps url

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Forcematica | Salesforce Experts</title>
-  <meta name="description" content="We are a Salesforce development company offering CRM solutions, custom app development, integration, and consulting services to help businesses automate and grow with Salesforce.">
-  <meta name="keywords" content="Salesforce development company, Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner">
+    <!-- Primary Meta Tags -->
+  <title>Forcematica Technologies | Salesforce CRM, Commerce Cloud & Integration Experts</title>
+  <meta name="description" content="We are a Salesforce development company offering CRM solutions, custom app development, integration, and consulting services to help businesses automate and grow with Salesforce. Forcematica Technologies is a Salesforce consulting and development company specializing in CRM customization, B2B Commerce Cloud, integrations, and Lightning Web Components (LWC).">
+  <meta name="keywords" content="Salesforce development company, Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner, Forcematica Technologies, Salesforce CRM experts, Salesforce development company, Commerce Cloud specialists, Salesforce integration services, custom LWC development, Salesforce consultants, Sales Cloud, Service Cloud, Experience Cloud, Salesforce CPQ, AppExchange apps">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://forcematica.com/">
+  <meta property="og:title" content="Forcematica Technologies | Salesforce CRM, Commerce Cloud & Integration Experts">
+  <meta property="og:description" content="We help businesses grow with Salesforce CRM customization, B2B Commerce Cloud, custom LWC, and seamless integration solutions.">
+  <meta property="og:image" content="https://forcematica.com/assets/img/hero-img.png"> <!-- Replace with real image URL -->
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://forcematica.com/">
+  <meta property="twitter:title" content="Forcematica Technologies | Salesforce CRM, Commerce Cloud & Integration Experts">
+  <meta property="twitter:description" content="Forcematica Technologies delivers CRM customization, Commerce Cloud implementation, and integration services on Salesforce.">
+  <meta property="twitter:image" content="https://forcematica.com/assets/img/hero-img.png"> <!-- Replace with real image URL -->
+
+  <!-- Canonical Tag -->
+  <link rel="canonical" href="https://forcematica.com/">
 
   <!-- Favicons -->
 <!--   <link href="assets/img/favicon.png" rel="icon"> -->
@@ -38,7 +56,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Forcematica</h1>
+        <h1 class="sitename">Forcematica Technolgoies</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
