--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+            <img src="assets/img/Banner_image_forcematica_salesforce.png" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
