changes in maps url

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- Primary Meta Tags -->
-  <title>Forcematica Technologies | Salesforce CRM, Commerce Cloud & Integration Experts</title>
-  <meta name="description" content="We are a Salesforce development company offering CRM solutions, custom app development, integration, and consulting services to help businesses automate and grow with Salesforce. Forcematica Technologies is a Salesforce consulting and development company specializing in CRM customization, B2B Commerce Cloud, integrations, and Lightning Web Components (LWC).">
-  <meta name="keywords" content="Salesforce development company, Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner, Forcematica Technologies, Salesforce CRM experts, Salesforce development company, Commerce Cloud specialists, Salesforce integration services, custom LWC development, Salesforce consultants, Sales Cloud, Service Cloud, Experience Cloud, Salesforce CPQ, AppExchange apps">
+  <title>Forcematica Technologies | Salesforce CRM Experts</title>
+  <meta name="description" content="Forcematica Technologies is a Salesforce consulting company offering CRM solutions, custom app development, integration, and consulting services to help businesses automate and grow with Salesforce. Forcematica Technologies is a Salesforce consulting and development company specializing in CRM customization, B2B Commerce Cloud, integrations, and Lightning Web Components (LWC).">
+  <meta name="keywords" content="Salesforce CRM solutions, Salesforce consulting services, Salesforce integration, custom Salesforce apps, CRM automation, Salesforce partner, Salesforce CRM experts, Salesforce development company, Commerce Cloud specialists, Salesforce integration services, Salesforce consultants, Sales Cloud, Service Cloud, Experience Cloud, AppExchange apps">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
