changes in maps url

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about.png" class="img-fluid" alt="">
+            <img src="assets/img/forcematica second banner Image.png" class="img-fluid" alt="">
             <!--Need to add Youtibe link   // Added bY Rahul Yadav  on date - 16 july 2025-->
             <a href="https://forcematica.com" class="glightbox pulsating-play-btn"></a>
           </div>
