--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/forcematica second banner Image.png" class="img-fluid animated" alt="">
+            <img src="assets/img/Banner_image_forcematica_salesforce.png" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/Banner_image_forcematica_salesforce.png" class="img-fluid" alt="">
+            <img src="assets/img/forcematica second banner Image.png" class="img-fluid" alt="">
             <!--Need to add Youtibe link   // Added bY Rahul Yadav  on date - 16 july 2025-->
             <a href="https://forcematica.com" class="glightbox pulsating-play-btn"></a>
           </div>
