changes in iamgees

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    @media only screen and (max-width: 600px) {
+      .hero {
+        padding: 0px !important;
+      }
+      .hero, .section {
+          padding-top: 0px;
+       }
+    }
+  </style>
   
 </head>
 
