--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="canonical" href="https://forcematica.com/">
 
   <!-- Favicons -->
-<!--   <link href="assets/img/favicon.png" rel="icon"> -->
+  <link href="assets/img/forcematica_logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -65,8 +65,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Forcematica Technolgoies</h1>
+        <img src="assets/img/forcematica_logo.png" alt="">
+        <!-- <h1 class="sitename">Forcematica Technolgoies</h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
