--- a/index.html
+++ b/index.html
@@ -824,7 +824,9 @@
             <span class="sitename">Forcematica</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Forcematica delivers Salesforce-powered digital transformation</p>
+            <p>Forcematica delivers Salesforce-powered digital transformation.
+              Forcematica Technologies is a trusted Salesforce consulting and development partner, helping businesses unlock the full potential of the Salesforce platform. We specialize in custom Salesforce solutions, third-party integrations, AppExchange product development, and strategic consultancy tailored to your business needs. With a team of certified experts and a commitment to innovation, we deliver scalable, secure, and high-impact solutions that drive real results. Partner with Forcematica — where expertise meets reliability.
+            </p>
             <!-- <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p> -->
