changes in logo

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">Forcematica</span>
+            <span class="sitename">Forcematica Technologies</span>
           </a>
           <div class="footer-contact pt-3">
             <p>Forcematica delivers Salesforce-powered digital transformation.
