changes in services pages

--- a/service-details.html
+++ b/service-details.html
@@ -5,12 +5,29 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Service Details - Forcematica Technologies</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  
+  <meta name="description" content="Forcematica Technologies is a trusted Salesforce consulting and development partner offering custom Salesforce solutions, integrations, AppExchange products, and strategic consultancy.">
+  <meta name="keywords" content="Salesforce, Salesforce Consulting, AppExchange Development, CRM Integration, Salesforce Customization, Salesforce Experts, Forcematica Technologies, B2B Commerce Cloud, Sales Cloud, Service Cloud">
+  <meta name="author" content="Forcematica Technologies">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Service Details - Forcematica Technologies">
+  <meta property="og:description" content="Trusted Salesforce experts delivering custom development, AppExchange products, seamless integrations, and consultancy.">
+  <meta property="og:image" content="https://forcematica.com/assets/img/Forcematica_Tech_salesforce_Logo.png">
+  <meta property="og:url" content="https://forcematica.com/service-details.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Service Details - Forcematica Technologies">
+  <meta name="twitter:description" content="Custom Salesforce development and integration services you can trust.">
+  <meta name="twitter:image" content="https://forcematica.com/assets/img/Forcematica_Tech_salesforce_Logo.png">
+
 
   <!-- Favicons -->
-<!--   <link href="assets/img/favicon.png" rel="icon"> -->
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="icon">
+  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
