changes in services pages

--- a/service-details.html
+++ b/service-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Service Details - Forcematica Technologies</title>
-  
+
   <meta name="description" content="Forcematica Technologies is a trusted Salesforce consulting and development partner offering custom Salesforce solutions, integrations, AppExchange products, and strategic consultancy.">
   <meta name="keywords" content="Salesforce, Salesforce Consulting, AppExchange Development, CRM Integration, Salesforce Customization, Salesforce Experts, Forcematica Technologies, B2B Commerce Cloud, Sales Cloud, Service Cloud">
   <meta name="author" content="Forcematica Technologies">
@@ -54,8 +54,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Forcematica Technologies</h1>
+       <img src="assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
+        <!-- <h1 class="sitename">Forcematica Technologies</h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
