--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Forcematica_Tech_salesforce_Logo.png" alt="">
+        <img src="assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
         <!-- <h1 class="sitename">Forcematica Technolgoies</h1> -->
       </a>
 
