--- a/service-details.html
+++ b/service-details.html
@@ -172,7 +172,7 @@
 
   <footer id="footer" class="footer">
 
-    <div class="footer-newsletter">
+    <!-- <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-lg-6">
@@ -187,7 +187,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -216,10 +216,10 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">AppExchange</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Sales Cloud</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Service Cloud</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Salesforce</a></li>
           </ul>
         </div>
 
@@ -230,7 +230,7 @@
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/forcematica/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
