--- a/service-details.html
+++ b/service-details.html
@@ -198,8 +198,8 @@
           <div class="footer-contact pt-3">
             <p>Pradhan Market</p>
             <p>Muhana 302029</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+91-8559957782</span></p>
-            <p><strong>Email:</strong> <span>info@forcematica.com</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91-9610641354</span></p>
+            <p><strong>Email:</strong> <span>forcematica@gmai;.com</span></p>
           </div>
         </div>
 
