--- a/service-details.html
+++ b/service-details.html
@@ -227,7 +227,7 @@
           <h4>Follow Us</h4>
           <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p> -->
           <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/company/forcematica/"><i class="bi bi-linkedin"></i></a>
