--- a/service-details.html
+++ b/service-details.html
@@ -60,10 +60,10 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="https://www.forcematica.com/#hero">Home</a></li>
+          <li><a href="https://www.forcematica.com/#about">About</a></li>
+          <li><a href="https://www.forcematica.com/#services">Services</a></li>
+          <li><a href="https://www.forcematica.com/#portfolio">Portfolio</a></li>
           <!-- <li><a href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
