changes in services pages

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <a href="https://forcematica.com" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Forcematica</h3>
+            <h3>Forcematica Technolgoies</h3>
             <p class="fst-italic">
               At Forcematica, we are a team of passionate Salesforce experts committed to helping businesses achieve digital transformation through the power of Salesforce. With expertise in B2B Commerce Cloud, Sales Cloud, Service Cloud, and more. 
             </p>
