changes in services pages

--- a/index.html
+++ b/index.html
@@ -756,6 +756,8 @@
 
           <div class="col-lg-7">
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS00000SgoWZ" class="php-email-form" method="POST">
+              <input type=hidden name="oid" value="00DNS00000SgoWZ">
+              <input type=hidden name="retURL" value="https://www.forcematica.com/">
             <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
               <div class="row gy-4">
 
