--- a/index.html
+++ b/index.html
@@ -755,6 +755,8 @@
           </div>
 
           <div class="col-lg-7">
+            <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+       
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS00000SgoWZ" class="php-email-form" method="POST">
               <input type=hidden name="oid" value="00DNS00000SgoWZ">
               <input type=hidden name="retURL" value="https://www.forcematica.com/">
