--- a/index.html
+++ b/index.html
@@ -772,15 +772,22 @@
                 </div>
 
                 <div class="col-md-6">
+                  <label for="phone">Phone</label>
+                  <input  id="phone" class="form-control" maxlength="40" maxlength="80" name="phone" size="20" type="tel"required="" />
+                  <!-- <label for="Email" class="pb-2">Your Email</label>
+                  <input type="email"  id="email" maxlength="80" name="email" size="20" > -->
+                </div>
+                <div class="col-md-6">
                   <label for="Email" class="pb-2">Your Email</label>
                   <input type="email" class="form-control" id="email" maxlength="80" name="email" size="20" required="">
                 </div>
 
-                <div class="col-md-12">
+                <div class="col-md-6">
                   <label for="00NNS00002EA5dF" class="pb-2">Subject</label>
                   <input type="text" class="form-control"  id="00NNS00002EA5dF" name="00NNS00002EA5dF" required="">
                   <input style="display: none;"  id="company" maxlength="40" name="company" value="forcemtica website" size="20" type="text" /><br>
                 </div>
+                
 
                 <div class="col-md-12">
                   <label for="message-field" class="pb-2">Message</label>
