changes in services pages

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
                 <div class="col-md-6">
                   <input style="display: none;" id="first_name" maxlength="40" name="first_name" value="TEST" size="20" type="text" />
-                  <label for="last_name" class="pb-2">Your Name</label>
+                  <label for="last_name" class="pb-2">Name</label>
                   <input type="text"  id="last_name" maxlength="80" name="last_name" size="20" class="form-control" required="">
                 </div>
 
@@ -778,7 +778,7 @@
                   <input type="email"  id="email" maxlength="80" name="email" size="20" > -->
                 </div>
                 <div class="col-md-6">
-                  <label for="Email" class="pb-2">Your Email</label>
+                  <label for="Email" class="pb-2">Email</label>
                   <input type="email" class="form-control" id="email" maxlength="80" name="email" size="20" required="">
                 </div>
 
