--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
               <input type=hidden name="oid" value="00DNS00000SgoWZ">
               <input type=hidden name="retURL" value="https://www.forcematica.com/">
               
-            <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
+            <!-- <form action="forms/contact.php" method="post" class="php-email-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
               <div class="row gy-4">
 
                 <div class="col-md-6">
