--- a/index.html
+++ b/index.html
@@ -758,11 +758,11 @@
           <div class="col-lg-7">
            
        <!--class="php-email-form"-->
-            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS00000SgoWZ"  method="POST">
+            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS00000SgoWZ"  class="php-email-form"  method="POST">
               <input type=hidden name="oid" value="00DNS00000SgoWZ">
               <input type=hidden name="retURL" value="https://www.forcematica.com/">
               
-            <!-- <form action="forms/contact.php" method="post" class="php-email-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
+            <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -772,7 +772,7 @@
                 </div>
 
                 <div class="col-md-6">
-                  <label for="phone">Phone</label>
+                  <label for="phone" class="pb-2">Phone</label>
                   <input  id="phone" class="form-control" maxlength="40" maxlength="80" name="phone" size="20" type="tel"required="" />
                   <!-- <label for="Email" class="pb-2">Your Email</label>
                   <input type="email"  id="email" maxlength="80" name="email" size="20" > -->
