changes in services pages

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <link rel="canonical" href="https://forcematica.com/">
 
   <!-- Favicons -->
-  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="icon">
-  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="apple-touch-icon">
+  <link href="https://forcematica.com/assets/img/Fav_Icon_Forcematica_salesforce_technologies.png" rel="icon">
+  <link href="https://forcematica.com/assets/img/Fav_Icon_Forcematica_salesforce_technologies.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -66,7 +66,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
+        <img src="https://forcematica.com/assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
         <!-- <h1 class="sitename">Forcematica Technolgoies</h1> -->
       </a>
 
@@ -179,7 +179,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/forcematica second banner Image.png" class="img-fluid" alt="">
+            <img src="https://forcematica.com/assets/img/forcematica second banner Image.png" class="img-fluid" alt="">
             <!--Need to add Youtibe link   // Added bY Rahul Yadav  on date - 16 july 2025-->
             <a href="https://forcematica.com" class="glightbox pulsating-play-btn"></a>
           </div>
@@ -836,7 +836,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
+          <a href="https://forcematica.com/index.html" class="d-flex align-items-center">
             <span class="sitename">Forcematica Technologies</span>
           </a>
           <div class="footer-contact pt-3">
