--- a/service-details.html
+++ b/service-details.html
@@ -26,8 +26,8 @@
 
 
   <!-- Favicons -->
-  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="icon">
-  <link href="assets/img/Forcematica_Tech_salesforce_Logo.png" rel="apple-touch-icon">
+  <link href="https://forcematica.com/assets/img/Fav_Icon_Forcematica_salesforce_technologies.png" rel="icon">
+  <link href="https://forcematica.com/assets/img/Fav_Icon_Forcematica_salesforce_technologies.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
