changes in services pages

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input style="display: none;" id="first_name" maxlength="40" name="first_name" value="TEST" size="20" type="text" />
+                  <input style="display: none;" id="first_name" maxlength="40" name="first_name" value="" size="20" type="text" />
                   <label for="last_name" class="pb-2">Name</label>
                   <input type="text"  id="last_name" maxlength="80" name="last_name" size="20" class="form-control" required="">
                 </div>
