--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="https://forcematica.com" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="https://forcematica.com/assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
         <!-- <h1 class="sitename">Forcematica Technolgoies</h1> -->
@@ -840,7 +840,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="https://forcematica.com/index.html" class="d-flex align-items-center">
+          <a href="https://forcematica.com" class="d-flex align-items-center">
             <span class="sitename">Forcematica Technologies</span>
           </a>
           <div class="footer-contact pt-3">
