Add for chagne in index page

--- a/service-details.html
+++ b/service-details.html
@@ -52,7 +52,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="https://forcematica.com" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
        <img src="assets/img/Forcematica_Tech_salesforce_Logo.png" alt="formatica Salesforce company jaipur">
         <!-- <h1 class="sitename">Forcematica Technologies</h1> -->
@@ -100,7 +100,7 @@
         <h1 class="mb-2 mb-lg-0">Service Details</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://forcematica.com">Home</a></li>
             <li class="current">Service Details</li>
           </ol>
         </nav>
@@ -145,7 +145,7 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/Forcematica_Cloud_solutions.png" alt="" class="img-fluid services-img">
             <h3>Driving innovation and efficiency across your business</h3>
             <p>
               At Forcematica, we are a team of passionate Salesforce experts committed to helping businesses achieve digital transformation through the power of Salesforce            </p>
