--- a/service-details.html
+++ b/service-details.html
@@ -119,7 +119,7 @@
             <div class="service-box">
               <h4>Serices List</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
+                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>B2B Commerce Cloud</span></a>
                 <a href="#"><i class="bi bi-arrow-right-circle"></i><span>AppExchange</span></a>
                 <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Sales Cloud</span></a>
                 <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Service Cloud</span></a>
@@ -130,8 +130,8 @@
             <div class="service-box">
               <h4>Download Catalog</h4>
               <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
-                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
+                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Get Quote</span></a>
+                <a href="#"><i class="bi bi-file-earmark-word"></i><span>App Exchange Product</span></a>
               </div>
             </div><!-- End Services List -->
 
