Add for chagne in index page

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <!-- <i class="bi bi-bounding-box-circles"></i> -->
                 <i class="bi bi-globe"></i>
               </div>
-              <a href="https://www.forcematica.com/service-details.htmls" class="stretched-link">
+              <a href="https://www.forcematica.com/service-details.html" class="stretched-link">
                 <h3>Experience Cloud</h3>
               </a>
               <p>Build portals and communities to connect customers, partners, and employees.</p>
