Add for chagne in index page

--- a/service-details.html
+++ b/service-details.html
@@ -128,9 +128,9 @@
             </div><!-- End Services List -->
 
             <div class="service-box">
-              <h4>Download Catalog</h4>
+              <h4>Check Products</h4>
               <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Get Quote</span></a>
+                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Cloud Services</span></a>
                 <a href="#"><i class="bi bi-file-earmark-word"></i><span>App Exchange Product</span></a>
               </div>
             </div><!-- End Services List -->
