--- a/service-details.html
+++ b/service-details.html
@@ -199,7 +199,7 @@
             <p>Pradhan Market</p>
             <p>Muhana 302029</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+91-9610641354</span></p>
-            <p><strong>Email:</strong> <span>forcematica@gmai;.com</span></p>
+            <p><strong>Email:</strong> <span>forcematica@gmai.com</span></p>
           </div>
         </div>
 
@@ -240,10 +240,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Forcematica Technologies</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+       
       </div>
     </div>
 
@@ -252,10 +249,10 @@
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -265,7 +262,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
